--- a/styles.css
+++ b/styles.css
@@ -338,12 +338,17 @@ p code{
 	border-radius: 8px;
 	background-color: var(--lt-gray);
 	box-shadow: var(--box-shadow-sm);
-	/* TO DO: make this a grid container with  equal columns and a 16px gap */
+	/* make this a grid container with  equal columns and a 16px gap */
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
 	
 }
 
 #multi-grids h2, #multi-grids p{
-	/* TO DO: make these items span all columns in their parent container's grid */
+	/*  make these items span all columns in their parent container's grid */
+    grid-column: 1 / -1;
 	
 }
 
@@ -448,30 +453,43 @@ p code{
 
 /* ----- TWO-COLUMN GRID SECTION STYLES ----- */
 #two-col-grid > div{
-	/* TO DO: make this a grid container with 2 equal columns, with a 16px gap */
+	/*  make this a grid container with 2 equal columns, with a 16px gap */
 	
 	box-shadow: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 16px;
 }
 
 /* ----- THREE-COLUMN GRID SECTION STYLES ----- */
 #three-col-grid > div{
-	/* TO DO: make this a grid container with 3 equal columns, with a 16px gap */
+	/*  make this a grid container with 3 equal columns, with a 16px gap */
 	
 	box-shadow: none;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 16px;
 }
 
 /* ----- FOUR-COLUMN GRID SECTION STYLES ----- */
 #four-col-grid > div{
-	/* TO DO: make this a grid container with 4 equal columns, with a 16px gap */
+	/*  make this a grid container with 4 equal columns, with a 16px gap */
 	
 	box-shadow: none;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 16px;
 }
 
 /* ----- LAYOUT 1 SECTION STYLES ----- */
 #layout1 > div{
-	/* TO DO: make this a grid container with 4 equal columns, with a 16px gap */
+	/*  make this a grid container with 4 equal columns, with a 16px gap */
 	
 	box-shadow: none;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 16px;
 }
 
 #layout1 pre{
@@ -482,52 +500,64 @@ p code{
 #layout1 .red{
 	/* TO DO: make this item span all columns in its parent container's grid */
 	
+    grid-column: 1 / -1;
 }
 
 /* ----- LAYOUT 2 SECTION STYLES ----- */
 #layout2 > div{
-	/* TO DO: make this a grid container with 4 equal columns, with a 16px gap */
+	/* make this a grid container with 4 equal columns, with a 16px gap */
 	
 	box-shadow: none;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 16px;
 }
 
 #layout2 .red, #layout2 .yellow{
-	/* TO DO: make these items span all columns in their parent container's grid */
-	
+	/*  make these items span all columns in their parent container's grid */
+	grid-column: 1 / -1;
 }
 
 #layout2 .green{
-	/* TO DO: make this item span 2 columns in its parent container's grid */
-	
+	/*  make this item span 2 columns in its parent container's grid */
+	grid-column: span 2;
 }
 
 /* ----- LAYOUT 3 SECTION STYLES ----- */
 #layout3 > div{
-	/* TO DO: make this a grid container with 3 equal columns and 2 equal rows, with a 16px gap */
+	/* make this a grid container with 3 equal columns and 2 equal rows, with a 16px gap */
 	
 	box-shadow: none;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 16px;
 }
 
 #layout3 .red{
-	/* TO DO: make this item span 2 rows in the first column of its parent container's grid */
-	
+	/*  make this item span 2 rows in the first column of its parent container's grid */
+	grid-row: span 2;
 }
 
 /* ----- LAYOUT 4 SECTION STYLES ----- */
 #layout4 > div{
-	/* TO DO: make this a grid container with 4 equal columns and 2 equal rows, with a 16px gap */
-	
+	/*  make this a grid container with 4 equal columns and 2 equal rows, with a 16px gap */
+	display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 16px;
 	box-shadow: none;
 }
 
 #layout4 .red{
-	/* TO DO: make this item span 2 rows in the first column of its parent container's grid */
-	
+	/*  make this item span 2 rows in the first column of its parent container's grid */
+    grid-row: 1 / 3;
 }
 
 #layout4 .purple{
-	/* TO DO: make this item span 2 rows in the last column of its parent container's grid */
-	
+	/*  make this item span 2 rows in the last column of its parent container's grid */
+    grid-column: 4 / 5;
+    grid-row: 1 / 3;
 }
 
 /* ----- EXAMPLE 1 SECTION STYLES ----- */
@@ -539,14 +569,17 @@ p code{
 }
 
 #ex1 #example1{
-	/* TO DO: make this a grid container with 2 equal columns and 4 equal rows, with a 16px gap */
-	
+	/*  make this a grid container with 2 equal columns and 4 equal rows, with a 16px gap */
+	display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 16px;
 	box-shadow: none;
 }
 
 #example1 .red, #example1 .blue{
-	/* TO DO: make these items span all columns of its parent container's grid */
-	
+	/*  make these items span all columns of its parent container's grid */
+	grid-column: -1 / 1;
 }
 
 /* ----- EXAMPLE 2 SECTION STYLES ----- */
@@ -558,19 +591,23 @@ p code{
 }
 
 #ex2 #example2{
-	/* TO DO: make this a grid container with 3 equal columns and 4 equal rows, with a 16px gap */
+	/*  make this a grid container with 3 equal columns and 4 equal rows, with a 16px gap */
 	
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 16px;
 	box-shadow: none;
 }
 
 #example2 .red, #example2 .green-2{
-	/* TO DO: make these items span all columns of its parent container's grid */
-	
+	/*  make these items span all columns of its parent container's grid */
+	grid-column: -1 / 1;
 }
 
 #example2 .blue{
-	/* TO DO: make this item span 2 rows of its parent container's grid */
-	
+	/* make this item span 2 rows of its parent container's grid */
+	grid-row: span 2;
 }
 
 /* ----- FOOTER STYLES ----- */
@@ -583,13 +620,18 @@ footer{
 #social{
 	max-width: 325px;
 	margin: 1rem auto;
-	/* TO DO: make this a grid container with 3 equal columns and a 10px gap, then justify and align everything in this container to the center */
-	
+	/*  make this a grid container with 3 equal columns and a 10px gap, then justify and align everything in this container to the center */
+	display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    justify-items: center;
+    align-items: center;
 }
 
 #social h2{
-	/* TO DO: make this item span all columns of its parent container's grid */
-	
+	/* make this item span all columns of its parent container's grid */
+	grid-column: -1 / 1;
+    
 }
 
 #social a{
@@ -617,12 +659,16 @@ footer{
 
 @media screen and (min-width: 550px){
     nav ul{
-        /* TO DO: Make this into a grid container with three columns that size automatically based on their content and add a 1rem gap */
-        
+        /*  Make this into a grid container with three columns that size automatically based on their content and add a 1rem gap */
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        gap: 1rem;
+
     }
 
     #multi-grids div{
-        /* TO DO: Adjust the grid in the section to have three columns instead of two */
+        /*  Adjust the grid in the section to have three columns instead of two */
+        grid-template-columns: repeat(3, 1fr);
         
     }
 }
@@ -653,9 +699,13 @@ footer{
 
 @media screen and (min-width: 900px){
     header{
-        /* TO DO: Make this into a grid container with three columns. The first should be 0.25fr wide, the second should be 1.75fr wide, and the last should be 2fr wide.
+        /*  Make this into a grid container with three columns. The first should be 0.25fr wide, the second should be 1.75fr wide, and the last should be 2fr wide.
         Include a 1rem gap and align the items to the center */
         
+        display: grid;
+        grid-template-columns: 0.25fr 1.75fr 2fr;
+        gap: 1rem;
+        align-items: center;
     }
 
     header svg{
@@ -665,7 +715,11 @@ footer{
 
     nav ul{
         /* TO DO: Make this into a grid container with three equal columns, no row gap and a 1rem column gap*/
-        
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1rem;
+        margin: 0;
+
         padding: 0;
     }
 
@@ -678,16 +732,25 @@ footer{
         margin: 1rem auto;
         padding: 1rem 2rem;
 
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem 2rem;
+
     }
     
     #required h2, #required > p{
         /* TO DO: Make these items display in the first column of their container only */
-        
+        grid-column: 1 / 2;
+        grid-row: auto;
     }
     
     #required > img{
-        /* TO DO: Make this image display in the second column of the container and span the first three of the rows, also align it to the center */
+        /* Make this image display in the second column of the container and span the first three of the rows, also align it to the center */
         
+        grid-column: 2/3;
+        grid-row : 1 / 4;
+        align-self: center;
+
         margin: 0;
     }
     
@@ -696,20 +759,27 @@ footer{
     }
 
     #multi-grids div{
-        /* TO DO: Adjust this grid so that it will have six columns instead of three */
-        
+        /* Adjust this grid so that it will have six columns instead of three */
+        grid-template-columns: repeat(6, 1fr);
+        gap: 1rem 2rem;
         padding: 2rem;
     }
 
     #practice{
-        /* TO DO: Make this a grid container with two columns that are 49% wide and have a 2rem gap for the rows and columns */
+        /*  Make this a grid container with two columns that are 49% wide and have a 2rem gap for the rows and columns */
         padding: 2rem;
+
+        display: grid;
+        grid-template-columns: repeat(2, 49%);
+        gap: 2rem;
 
     }
         
     #practice h2, #practice p, #practice strong{
-    /* TO DO: Make these elements span all of the columns in their parent container */
-        
+    /* Make these elements span all of the columns in their parent container */
+        grid-column: 1 / -1;
+        grid-row: auto;
+    
     }
 
     #practice section{
@@ -724,8 +794,10 @@ footer{
     }
 
     #practice{
-        /* TO DO: Adjust the number of columns in this grid container to 12 that are equal in size */
+        /*  Adjust the number of columns in this grid container to 12 that are equal in size */
         
+        grid-template-columns: repeat(12, 1fr);
+        gap: 2rem;
     }
 
     #practice section{
